# copilot2chat

./: Cargo.toml  Dockerfile  README.md  start.sh
.github/workflows/: docker-build.yml  release.yml  release_back.yml
src/: main.rs  util.rs  uuid.rs
