[package]
name = "copilot2chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
once_cell = "1.8.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
